--- a/package.json
+++ b/package.json
@@ -9,15 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "apollo-server-core": "^3.6.4",
+    "apollo-server-micro": "^3.6.4",
+    "daisyui": "^2.10.0",
+    "gql": "^1.1.2",
+    "graphql": "^16.3.0",
+    "micro": "^9.3.4",
+    "mongoose": "^6.2.7",
     "next": "12.1.0",
+    "prettier": "^2.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.40",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
   }
 }
