--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^16.3.0",
     "micro": "^9.3.4",
     "mongoose": "^6.2.7",
+    "nanoid": "^3.3.1",
     "next": "12.1.0",
     "prettier": "^2.6.0",
     "react": "17.0.2",
